--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,6 @@
         "php": ">=5.6",
         "ext-zip": "*",
 
-        "symfony/symfony": ">=2.3"
+        "symfony/dependency-injection": ">=2.3"
     }
 }
